--- a/style.css
+++ b/style.css
@@ -28,11 +28,27 @@
     margin: 0 auto;
 }
 
-body{
+body {
     overflow-x: hidden;
+    background-color: var(--fundo-site);
 }
 
-/* link, tamanho, posiçao e repetiçao do fundo  */
+.titulo {
+    display: flex;
+    font-family: "Recursive", sans-linear-bold;
+    font-size: 35px;
+    font-weight: 600px;
+}
+
+.titulo h2 {
+    color: var(--branco);
+    margin-bottom: 0;
+    background-color: #4700CF;
+    border-radius: 20px;
+    padding: 10px 18px;
+}
+
+/* -----------Header-------------- */
 .banner {
     background-image: url(./img/Banner.png);
     height: 120vh;
@@ -45,7 +61,11 @@ body{
     justify-content: space-between;
 }
 
-/* cabeçalho  */
+.titulo span{
+    color: var(--roxo-pixelV);
+    border-bottom: solid 3px var(--verde-pixelV);
+}
+
 header {
     height: 165px;
 }
@@ -110,4 +130,32 @@ header img {
     color: var(--verde-pixelV);
     list-style-type: none;
     padding: 0;
+}
+
+/* ----------------SOBRE------------ */
+#sobre {
+    display: flex;
+    align-items: center;
+    gap: 80px;
+    margin-top: 120px;
+    margin-bottom: 120px;
+}
+
+#sobre img {
+    max-width: 460px;
+    width: 40%;
+    border-radius: 40px;
+    box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.2);
+}
+
+#sobre h2{
+    margin-right: 5px;
+}
+
+
+#sobre p {
+    font-family: "Recursive", sans-linear;
+    size: 20px;
+    text-align: justify;
+    margin-top: 30px;
 }
