--- a/style.css
+++ b/style.css
@@ -1,17 +1,16 @@
 /* margem  */
-* {
+/* Reset CSS */
+*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-/* Fonte  */
 @font-face {
     font-family: "Recursive";
     src: url(./fonts/Recursive-VariableFont_CASL\,CRSV\,MONO\,slnt\,wght.ttf);
 }
 
-/* Paleta de cores */
 :root {
     --branco: #FFFFFF;
     --preto: #000000;
@@ -21,74 +20,77 @@
     --contato: #E5E5E5;
 }
 
-/* grid  */
-.container-grid {
+.container-grid{
     width: 80vw;
     max-width: 1400px;
     margin: 0 auto;
 }
 
-body {
+body{
     overflow-x: hidden;
     background-color: var(--fundo-site);
 }
 
-.titulo {
+.titulo{
     display: flex;
     font-family: "Recursive", sans-linear-bold;
+    font-weight: 600;
     font-size: 35px;
-    font-weight: 600px;
 }
 
-.titulo h2 {
+.titulo h2{
     color: var(--branco);
     margin-bottom: 0;
-    background-color: #4700CF;
+    background-color: var(--roxo-pixelV);
     border-radius: 20px;
+    /* padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 18px;
+    padding-right: 18px; */
     padding: 10px 18px;
 }
 
-/* -----------Header-------------- */
-.banner {
-    background-image: url(./img/Banner.png);
+.titulo span{
+    color: var(--roxo-pixelV);
+    border-bottom: solid 3px var(--verde-pixelV);
+}
+
+/* ------------------Header----------------- */
+
+.banner{
+    background-image: url("./img/Banner.png");
     height: 120vh;
     background-repeat: no-repeat;
     background-position: 0 -10px;
-
 
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
 
-.titulo span {
-    color: var(--roxo-pixelV);
-    border-bottom: solid 3px var(--verde-pixelV);
-}
-
-header {
+header{
     height: 165px;
 }
 
-header .container-grid {
+header .container-grid{
     height: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
-header img {
+header img{
     width: 234px;
 }
 
-.menu {
+.menu{
     max-width: 700px;
     width: 70%;
     display: flex;
     justify-content: space-between;
 }
 
-.menu a {
+.menu a{
     font-size: 20px;
     color: var(--branco);
     font-family: "Recursive", sans-linear;
@@ -99,22 +101,22 @@ header img {
     transition: text-decoration 500ms ease;
 }
 
-.menu a:hover {
+.menu a:hover{
     text-decoration-color: var(--verde-pixelV);
 }
 
-.conteudo-banner {
+.conteudo-banner{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
 }
 
-.conteudo-banner img {
+.conteudo-banner img{
     max-width: 380px;
     width: 50%;
 }
 
-.conteudo-banner p {
+.conteudo-banner p{
     font-size: 26px;
     font-family: "Recursive", sans-linear;
     color: var(--branco);
@@ -122,7 +124,7 @@ header img {
     margin-bottom: 100px;
 }
 
-.conteudo-banner ul {
+.conteudo-banner ul{
     font-size: 30px;
     font-weight: 600;
     text-transform: uppercase;
@@ -132,8 +134,10 @@ header img {
     padding: 0;
 }
 
-/* ----------------SOBRE------------ */
-#sobre {
+
+/* ----------------SOBRE---------------- */
+
+#sobre{
     display: flex;
     align-items: center;
     gap: 80px;
@@ -141,29 +145,29 @@ header img {
     margin-bottom: 120px;
 }
 
-#sobre img {
+#sobre img{
     max-width: 460px;
     width: 40%;
     border-radius: 40px;
     box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.2);
 }
 
-#sobre h2 {
+#sobre h2{
     margin-right: 5px;
 }
 
-
-#sobre p {
+#sobre p{
     font-family: "Recursive", sans-linear;
-    size: 20px;
+    font-size: 20px;
     text-align: justify;
     margin-top: 30px;
 }
 
-/* ------------Parallax---------- */
+/* -----------------Parallax---------------- */
 
-#parallax {
+#parallax{
     height: 250px;
+    /* background-image: url(./img/parallax.svg); */
 
     background: linear-gradient(rgba(0, 0, 0, 0.26)), url(./img/parallax.svg);
 
@@ -174,40 +178,40 @@ header img {
     background-size: 30%;
 }
 
-/* ----------Serviços--------- */
-#servicos {
+/* --------------Serviços-------------------- */
+#servicos{
     margin-bottom: 120px;
 }
 
-#servicos .titulo {
+#servicos .titulo{
     justify-content: center;
     margin-bottom: 55px;
 }
 
-#servicos h2 {
+#servicos h2{
     margin-left: 5px;
 }
 
-/* -------------cards------------- */
-
-.container-cards {
+.container-cards{
     display: flex;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
     position: relative;
+
 }
 
-.linharoxa{
+.linha-roxa{
     height: 250px;
     width: 100vw;
-    background: linear-gradient(0deg,rgba(36, 0, 105, 1) 0%, rgba(71, 0, 207, 1) 100%);
-  position: absolute;
-  z-index: -1;
-  top:calc(50% -125px);
+    background: linear-gradient(0deg, rgba(36, 0, 105, 1)0% ,
+     rgba(71, 0, 207, 1) 100%);
+    position: absolute;
+    z-index: -1;
+    top: calc(50% - 125px);
 }
 
-#servicos .card {
+#servicos .card{
     width: 300px;
     margin: 20px;
     padding: 40px 20px;
@@ -222,7 +226,7 @@ header img {
     justify-content: center;
 }
 
-#servicos .card h3 {
+#servicos .card h3{
     font-size: 24px;
     margin: 5px 0 30px;
     color: var(--roxo-pixelV);
@@ -230,7 +234,7 @@ header img {
     text-align: center;
 }
 
-#servicos .card p {
+#servicos .card p{
     font-family: "Recursive", sans-linear;
     font-size: 18px;
     margin-bottom: 20px;
@@ -247,13 +251,14 @@ header img {
 }
 
 #servicos .card:hover svg{
-    fill: var(--verde-pixelV);
+    fill: var(--verde-pixelV)
 }
 
 #servicos .card:hover h3{
     color: var(--verde-pixelV);
 }
-/* ----------------Cases---------------- */
+
+/* -----------------Cases--------------------- */
 
 #cases h2{
     margin-right: 5px;
@@ -275,8 +280,8 @@ header img {
 #meuCarrossel{
     max-width: 1170px;
     width: 90%;
-
 }
+
 /* ---------- Contato ----------- */
 
 #contato {
@@ -349,7 +354,7 @@ header img {
     outline: none;
 }
 
-.campo-descricao text.area{
+.campo-descricao textarea{
     color: var(--preto);
     background-color: var(--branco);
 
@@ -361,7 +366,7 @@ header img {
     resize: none;
 }
 
-.campo label
+.campo label,
 .campo-descricao label{
     margin-bottom: 15px;
 }
@@ -372,14 +377,14 @@ header img {
     font-size: 17px;
 }
 
-.campo input::placeholder
+.campo input::placeholder,
 .campo-descricao textarea::placeholder{
     color: #A0A0A0;
 }
 
-.campo input:focus
+.campo input:focus,
 .campo-descricao textarea:focus{
-    outline: 2px solid var(--verde-pixelV)
+    outline: 2px solid var(--verde-pixelV);
 }
 
 #contato form button{
@@ -591,4 +596,4 @@ footer .container-grid{
     .titulo h2{
         font-size: 20px;
     }
-} 
+}
